# CoFluentModelDemo

./: .cproject  .project  README.md
Tutorial/Tutorial/models/: .PlatformModel.cf_plf_muuid  .gitignore  ApplicationModel.cf_app  ApplicationModel.cf_app_di  MappingModel.cf_map
Tutorial/Tutorial/release/ApplicationModelBuild/: ApplicationModel.cf_tra  ApplicationModel.launch  cofs_dp.csv
Tutorial/Tutorial/release/ApplicationModelRefinementBuild/: ApplicationModelRefinement.launch  ApplicationModelRefinementF=0.1Hz.cf_tra  ApplicationModelRefinementF=0.5Hz.cf_tra  ExploreApplicationModelRefinement.launch
Tutorial/Tutorial/release/MappingModelBuild/: MappingModel.cf_tra  MappingModel.launch
Tutorial/Tutorial/release/MappingModelRefinementBuild/: ExploreMappingModelRefinement.launch  MappingModelRefinement.cf_tra  MappingModelRefinement.launch
sampleDemo/gen-sysc/sampleDemoApp/include/: cfm_consumer.h  cfm_producer.h  cfm_sampledemoapp.h  cfm_sampledemoapp_global.h  cfm_sampledemoapp_global_types.h  cfm_sampledemoapp_top.h  cfm_sampledemoapp_user.h
sampleDemo/gen-sysc/sampleDemoApp/src/: application_source_includes.cpp  cfm_consumer.cpp  cfm_producer.cpp  cfm_sampledemoapp.cpp  cfm_sampledemoapp_global.cpp  cfm_sampledemoapp_top.cpp  cfm_sampledemoapp_user.cpp
sampleDemo/models/: .sampleDemoApp.cf_app_archive  sampleDemoApp.cf_app_di
sampleDemo/models/sampleDemoAppCharts/: sampleDemoApp.cf_tml  sampleDemoApp.cf_yft
sampleDemo/release/sampleDemoAppBuild/: CMakeCache.txt  CMakeLists.txt  ListOfSources.cmake  Makefile  cmake_install.cmake  cofs_mon_probes.csv  sampleDemoApp.launch
simpleDwemo/: .cproject  .project
simpleDwemo/simpleDwemo/models/: .simpleDwemoApp.cf_app_archive  simpleDwemoApp.cf_app_di
simpleDwemo/simpleDwemo/models/simpleDwemoAppCharts/: simpleDwemoApp.cf_tml  simpleDwemoApp.cf_yft
simpleDwemo/simpleDwemo/release/simpleDwemoAppBuild/: CMakeCache.txt  CMakeLists.txt  ListOfSources.cmake  Makefile  cmake_install.cmake  cofs_mon_probes.csv  simpleDwemoApp.launch
simpleGitDemo/: .cproject  .project
simpleGitDemo/simpleGitDemo/models/: .simpleGitDemoApp.cf_app_archive  simpleGitDemoApp.cf_app  simpleGitDemoApp.cf_app_di
simpleGitDemo/simpleGitDemo/models/simpleGitDemoAppCharts/: simpleGitDemoApp.cf_tml  simpleGitDemoApp.cf_yft
simpleGitDemo/simpleGitDemo/release/simpleGitDemoAppBuild/: cofs_mon_probes.csv  simpleGitDemoApp.launch  simpleGitDemoAppBuild.vcxproj  simpleGitDemoAppBuild.vcxproj.filters
(+38 files in other folders)
